GNOME Bugzilla – Bug 780455
Can't add web calendars from HackerEvents
Last modified: 2017-04-13 12:23:25 UTC
Found https://www.hackerevents.org today Tried adding https://www.hackerevents.org/ical/usa/usa.ical as a "web calendar" in GNOME Calendar just to test, and it doesn't work... it spins around endlessly and the "Add" button never becomes available.
Created attachment 349794 [details] [review] source-dialog: improve URI handler Now we have a more reliable way to detect whether the passed URI is a file or a resource.
Attachment 349794 [details] pushed as fc074bc - source-dialog: improve URI handler